<resources>
    <string name="app_name">Readlist</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="shelf_name">Shelf Name</string>
    <string name="add">Add</string>
    <string name="book_cover_image">Book Cover Image</string>
    <string name="book_title">Book Title</string>
    <string name="search">Search</string>
    <string name="add_book_manually">Manually Add</string>
    <string name="mark_complete">Mark Complete</string>
    <string name="delete_book">Delete Book</string>
    <string name="plus_twenty">+20</string>
    <string name="plus_fifty">+50</string>
    <string name="done">Done</string>
    <string name="book_author">Book Author</string>
    <string name="pages">Pages</string>
    <string name="page_colon">Page:</string>
    <string name="scan_book">Scan Book</string>
    <string name="date_added">Added:</string>
    <string name="delete_shelf">Delete Shelf</string>
    <string name="edit_shelf">Edit Shelf</string>
    <string name="average_weekly_reading">Average Weekly Reading</string>
    <string name="reading_this_year">Reading This Year</string>
    <string name="all_time">All Time</string>
    <string name="pages_read">Pages Read</string>
    <string name="books_completed">Books Completed</string>
    <string name="reading_this_month">Reading This Month</string>
    <string name="number_of_books">Number of Books</string>
    <string name="edit_book">Edit Book</string>
    <string name="of">of</string>
    <string name="nav_element_image">Navigation Drawer Element Icon</string>
    <string name="hide_completed_books">Hide Completed Books</string>
    <string name="percentage">Completion Percentage</string>
    <string name="completed">Completed:</string>
    <string name="add_book_search">Search</string>
    <string name="statistics">Statistics</string>
    <string name="reset_statistics">Reset statistics</string>
    <string name="goals">Goals</string>
    <string name="page_goals">Page Goals</string>
    <string name="book_goals">Book Goals</string>
    <string name="goal_icon">Goal Icon</string>
    <string name="deadline">Deadline:</string>
    <string name="started">Started:</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="hide_completed_goals">Hide Completed Goals</string>
    <string name="cover_photo_capture">Cover Photo Capture</string>
    <string name="dark_red">Dark Red</string>
    <string name="dark_blue">Dark Blue</string>
    <string name="more_colours">More Colours</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sync_data">Sync data</string>
    <string name="email_address_optional">Email Address (optional)</string>
    <string name="email_address">Email Address</string>
    <string name="shelf">Shelf</string>
    <string name="book_goal">Book Goal</string>
    <string name="page_goal">Page Goal</string>
    <string name="goal_type">Goal Type</string>
    <string name="dates">Dates</string>
    <string name="goal">Goal:</string>
    <string name="amount">Amount</string>
    <string name="number_of_pages">Number of Pages</string>
    <string name="settings">Settings</string>
    <string name="email_us">Email us</string>
    <string name="readlist">Readlist</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="your_email_address">Your email address</string>
    <string name="lent_to_colon">Lent to:</string>
    <string name="lent_on">Lent on:</string>
    <string name="lend_book">Lend Book</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="lent_books">Lent Books</string>
    <string name="lend_to">Lend to</string>
    <string name="pick_date">Pick Date</string>
    <string name="set_start">Set Start</string>
    <string name="set_end">Set End</string>
    <string name="hide_shelved_books">Hide Shelved Books</string>
    <string name="lent_book">Lent Book</string>
    <string name="rate">Rate</string>
    <string name="comment">Comment</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_rating">Add Rating</string>
    <string name="cancel">Cancel</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="add_books">Add Books</string>
    <string name="add_comment">Add Comment</string>
    <string name="no_results_found">No Results Found</string>
    <string name="please_try_again_different_parameters">Please try again with different search parameters</string>
    <string name="search_results">Search Results</string>
    <string name="add_selected">Add Selected</string>
    <string name="unlend_confirmation">Unlend Confirmation</string>
    <string name="retrieve_book_from">Retrieve book from</string>
    <string name="you_cannot_delete_this_shelf">You cannot delete this shelf</string>
    <string name="scan_failed">Scan Failed</string>
    <string name="camera_is_not_supported">Camera is not supported on this device</string>
    <string name="add_book">Add Book</string>
    <string name="please_add_a_title">Please add a title</string>
    <string name="this_book_has_already_been_lent_to">This book has already been lent to</string>
    <string name="record_reading_activity">Record Reading Activity</string>
    <string name="view_stats">View Stats</string>
    <string name="update_page">Update Page</string>
    <string name="start_recording">Start Recording</string>
    <string name="save_activity">Save Activity</string>
    <string name="start_time_default">00:00:00</string>
    <string name="reading_colon">Reading:</string>
    <string name="unlend_book">Unlend Book</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="dont_ask_me_again">Don\'t ask me again</string>
    <string name="sort_by_title">Sort by Title</string>
    <string name="sort_by_shelf">Sort by Shelf</string>
    <string name="sort_by_date_added">Sort by Date Added</string>
    <string name="sort_by_author">Sort by Author</string>
    <string name="reading_sessions">Reading Sessions</string>
    <string name="time_spent_reading">Time Spent Reading</string>
    <string name="percent_completed">Percent Completed</string>
    <string name="by">By</string>
    <string name="book_statistics">Book Statistics</string>
    <string name="added">Added</string>
    <string name="rating">Rating</string>
    <string name="delete_this_reading_session">Delete this reading session?</string>
    <string name="sync_data_on_app_start">Sync data on app start</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="your_library_is_empty">Your library is empty</string>
    <string name="you_havent_lent_any_books">You haven\'t lent any books</string>
    <string name="no_comments_added">No comments added</string>
    <string name="you_havent_set_any_page_goals">You haven\'t set any page goals</string>
    <string name="you_havent_set_any_book_goals">You haven\'t set any book goals</string>
    <string name="crunching_the_numbers">Crunching the numbers</string>
    <string name="delete_comment">Delete comment</string>
    <string name="are_you_sure_reset_stats">Are you sure you want to reset your statistics? This cannot be undone</string>
    <string name="you_have_an_active_reading_session">You have an active reading session</string>
    <string name="update_book_page">Would you like to update the current page?</string>
    <string name="sort_by_completion">Sort by Completion</string>
    <string name="complete_book_question">Are you finished reading this book?</string>
    <string name="you_can_only_run_one_session_at_a_time">You can only run one session at a time</string>
    <string name="share_readlist">Share Readlist</string>
    <string name="warning">Warning</string>
    <string name="your_session_will_be_lost">You haven\'t saved your session. You will lose your data if you leave this screen. Continue?</string>
    <string name="sync_external_data">Sync External Data</string>
    <string name="sync_google_books">Sync Google Books</string>
    <string name="page_updates">Page Updates</string>
    <string name="you_have_no_reading_sessions">No reading sessions for this book</string>
    <string name="you_have_no_page_updates">No page updates for this book</string>
    <string name="add_books_to_shelf">Add books to shelf</string>
    <string name="import_external_data">Import external data</string>
    <string name="import_from_google_books">Import from Google Books</string>
    <string name="export_book_csv">Export Books as CSV</string>

    <string-array name="navigation_element_names">
        <item>All Books</item>
        <item>Shelves</item>
        <item>Lent Books</item>
        <item>Goals</item>
        <item>Statistics</item>
        <item>Settings</item>
    </string-array>

</resources>
