<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/EditBookTextView"
        android:text="@string/book_title" />

    <EditText
        android:id="@+id/edit_book_title"
        style="@style/EditBookEditText"
        android:hint="@string/book_title" />

    <TextView
        style="@style/EditBookTextView"
        android:text="@string/book_author" />

    <EditText
        android:id="@+id/edit_book_author"
        style="@style/EditBookEditText"
        android:hint="@string/book_author" />

    <TextView
        style="@style/EditBookTextView"
        android:text="@string/pages" />

    <EditText
        android:id="@+id/edit_book_number_of_pages"
        style="@style/EditBookEditText"
        android:hint="@string/pages"
        android:inputType="number" />

    <TextView
        style="@style/EditBookTextView"
        android:text="@string/shelf" />

    <Spinner
        android:id="@+id/edit_book_shelf_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>