<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/UpdateHeader"
        android:text="@string/book_statistics" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_title" />

        <TextView
            android:id="@+id/view_book_stats_title"
            style="@style/ViewBookStatsItem" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by" />

        <TextView
            android:id="@+id/view_book_stats_author"
            style="@style/ViewBookStatsItem" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/added" />

        <TextView
            android:id="@+id/view_book_stats_date_added"
            style="@style/ViewBookStatsItem" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent_completed" />

        <TextView
            android:id="@+id/view_book_stats_percent_completed"
            style="@style/ViewBookStatsItem" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating" />

        <TextView
            android:id="@+id/view_book_stats_rating"
            style="@style/ViewBookStatsItem" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1.0">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/time_spent_reading" />

        <TextView
            android:id="@+id/view_book_time_spent_reading"
            style="@style/ViewBookStatsItem" />
    </LinearLayout>

    <TextView
        style="@style/UpdateHeader"
        android:text="@string/reading_sessions" />

    <ListView
        android:id="@+id/view_book_stats_reading_sessions_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>