<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:padding="16dp">

    <EditText
        android:id="@+id/book_search_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_title"
        android:inputType="text"
        android:textColor="#000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/book_search_author"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_search_title"
        android:hint="@string/book_author"
        android:inputType="text"
        android:textColor="#000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/search_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_search_author"
        android:layout_centerHorizontal="true"
        android:text="@string/search"
        android:textColor="#000" />

</RelativeLayout>