<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading_colon" />

        <TextView
            android:id="@+id/record_reading_activity_book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textStyle="italic" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/record_reading_activity_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:contentDescription="@string/start_recording"
        android:padding="15dp"
        android:src="@drawable/ic_play_circle_outline_black_48dp" />

    <TextView
        android:id="@+id/record_reading_activity_timer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="15dp"
        android:text="@string/start_time_default"
        android:textSize="30sp" />

    <Button
        android:id="@+id/record_reading_activity_save_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:enabled="false"
        android:paddingBottom="20dp"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:paddingTop="20dp"
        android:text="@string/save_activity" />

</LinearLayout>