<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:padding="16dp">

    <EditText
        android:id="@+id/lent_book_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/lend_to"
        android:inputType="textCapWords"
        android:padding="15dp"
        android:textColor="#000"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/lent_book_date_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lent_book_name"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/lent_book_date_button"
            style="?android:button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/pick_date"/>

        <TextView
            android:id="@+id/lent_book_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="0.5"
            android:padding="5dp"
            android:text="@string/date"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>